🐛 Fixed support for modern sdkmanager (new path)